sample-app/k8s-resources/nginx-https/nginx-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - guestbook.assafdori.com
      secretName: guestbook-tls   # This secret will be created by Cert Manager
  rules:
    - host: guestbook.assafdori.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
